configuração do banco de dados e api com docker e docker-compose

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=forum-hub
+
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://db:3306/forum-hub_db}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
+
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
